update tool with public api config and new folder structure

--- a/Schema/InternalApi.yaml
+++ b/Schema/InternalApi.yaml
@@ -372,14 +372,10 @@ paths:
             example: 1
         - name: locationType
           in: query
-          description: The location type will be among Group = 0, Location = 1
+          description: The location type
           required: false
-          style: form
-          explode: true
           schema:
-            type: integer
-            format: int32
-            example: 1
+            $ref: '#/components/schemas/LocationType'
         - name: hierarchyId
           in: query
           description: The hierarchy identifier
@@ -392,17 +388,14 @@ paths:
             example: 11
         - name: locationStatuses
           in: query
-          description: The array of selected status unique identifier will be among
-            Active = 0, Inactive = 1, Archived = 2
+          description: The array of selected statuses
           required: false
           style: form
           explode: true
           schema:
             type: array
             items:
-              type: integer
-              format: int32
-              example: 0
+              $ref: '#/components/schemas/LocationStatus'
         - name: limit
           in: query
           description: The amount of locations return per request
@@ -544,14 +537,10 @@ paths:
             format: int32
         - name: locationType
           in: query
-          description: The location type will be among Group = 0, Location = 1
+          description: The location type
           required: true
-          style: form
-          explode: true
           schema:
-            type: integer
-            format: int32
-            example: 1
+            $ref: '#/components/schemas/LocationType'
       responses:
         204:
           description: Location deletion result
@@ -591,14 +580,10 @@ paths:
             format: int32
         - name: locationType
           in: query
-          description: Location type of selected location. Group = 0, Location = 1
-          required: false
-          style: form
-          explode: true
+          description: The location type
+          required: true
           schema:
-            minimum: 0
-            type: integer
-            format: int32
+            $ref: '#/components/schemas/LocationType'
       responses:
         200:
           description: A location with provided identifier
@@ -645,14 +630,10 @@ paths:
             format: int32
         - name: locationType
           in: query
-          description: The location type will be among Group = 0, Location = 1
+          description: The location type
           required: true
-          style: form
-          explode: true
           schema:
-            type: integer
-            format: int32
-            example: 1
+            $ref: '#/components/schemas/LocationType'
         - name: hierarchyId
           in: query
           description: The hierarchy identifier
@@ -672,9 +653,7 @@ paths:
           schema:
             type: array
             items:
-              type: integer
-              format: int32
-              example: 0
+              $ref: '#/components/schemas/LocationStatus'
         - name: levels
           in: query
           description: The number of level to traverse within hierarchy
@@ -815,14 +794,10 @@ paths:
             format: int32
         - name: locationType
           in: query
-          description: The location type will be among Group = 0, Location = 1
+          description: The location type
           required: true
-          style: form
-          explode: true
           schema:
-            type: integer
-            format: int32
-            example: 1
+            $ref: '#/components/schemas/LocationType'
       responses:
         200:
           description: Delete location validation result
@@ -1444,14 +1419,10 @@ paths:
           format: int32
       - name: locationType
         in: query
-        description: The location type will be among Group = 0, Location = 1
+        description: The location type
         required: true
-        style: form
-        explode: true
         schema:
-          type: integer
-          format: int32
-          example: 1
+          $ref: '#/components/schemas/LocationType'
       - name: hierarchyId
         in: query
         description: The hierarchy identifier
@@ -1613,14 +1584,10 @@ paths:
           format: int32
       - name: locationType
         in: query
-        description: The location type will be among Group = 0, Location = 1
+        description: The location type
         required: true
-        style: form
-        explode: true
         schema:
-          type: integer
-          format: int32
-          example: 1
+          $ref: '#/components/schemas/LocationType'
       - name: hierarchyId
         in: query
         description: The hierarchy identifier
@@ -1663,6 +1630,123 @@ paths:
           description: You do not have sufficient rights to this resource
         404:
           description: Location list not found
+  /locationlists/locations/{locationId}:
+    get:
+      tags:
+      - LocationList
+      summary: Get a list of available location list Ids by location identifier
+      description: Get a list of available location list Ids by location identifier
+      operationId: getLocationListAvailabilityByLocationId
+      parameters:
+        - $ref: '#/components/parameters/AccountHeader'
+        - $ref: '#/components/parameters/IdentityHeader'
+        - $ref: '#/components/parameters/LanguageHeader'
+        - name: locationId
+          in: path
+          description: The location identifier
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int32
+        - name: locationType
+          in: query
+          description: The location type
+          required: true
+          schema:
+            $ref: '#/components/schemas/LocationType'
+      responses:
+        200:
+          description: A List of available location list identifier for this location
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: integer
+                  format: int32
+            application/xml:
+              schema:
+                type: array
+                items:
+                  type: integer
+                  format: int32
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+        403:
+          description: You do not have sufficient rights to this resource
+        404:
+          description: Location not found
+  /locationlists/items/locations/{locationId}:
+    get:
+      tags:
+      - LocationList
+      summary: Get a list of available location list item Ids by parent List and location identifier
+      description: Get a list of available location list item Ids by parent List and by location identifier
+      operationId: getLocationListItemAvailabilityByLocationId
+      parameters:
+        - $ref: '#/components/parameters/AccountHeader'
+        - $ref: '#/components/parameters/IdentityHeader'
+        - $ref: '#/components/parameters/LanguageHeader'
+        - name: locationId
+          in: path
+          description: The location identifier
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int32
+        - name: listId
+          in: query
+          description: The parent list identifier
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: locationType
+          in: query
+          description: The location type
+          required: true
+          schema:
+            $ref: '#/components/schemas/LocationType'
+      responses:
+        200:
+          description: A List of available location item list identifier for this location
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: integer
+                  format: int32
+            application/xml:
+              schema:
+                type: array
+                items:
+                  type: integer
+                  format: int32
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+        403:
+          description: You do not have sufficient rights to this resource
+        404:
+          description: Location not found
 # Persons
   '/persons':
     get:
@@ -2349,17 +2433,9 @@ components:
           format: string
           example: Chicago
         locationType:
-          type: integer
-          description: The location type will be among Group = 0, Location = 1
-          format: int32
-          example: 1
+          $ref: '#/components/schemas/LocationType'
         locationStatus:
-          type: integer
-          nullable: true
-          description: The location status will be among Active = 0, Inactive = 1,
-            Archived = 2
-          format: int32
-          example: 0
+          $ref: '#/components/schemas/LocationStatus'
         parentId:
           type: integer
           nullable: true
@@ -2372,6 +2448,12 @@ components:
           description: The hierarchy identifier
           format: int32
           example: 10
+        isAvailable:
+          type: boolean
+          nullable: true
+          description: The available status for Location List
+          format: boolean
+          example: true
     MovingLocationParams:
       required:
       - locationId
@@ -2385,10 +2467,7 @@ components:
           format: int32
           example: 12
         locationType:
-          type: integer
-          description: The location type
-          format: int32
-          example: 0
+          $ref: '#/components/schemas/LocationType'
         parentId:
           type: integer
           description: The location parent identifier
@@ -2406,17 +2485,9 @@ components:
           format: string
           example: Chicago
         locationType:
-          type: integer
-          description: The location type will be among Group = 0, Location = 1
-          format: int32
-          example: 1
+          $ref: '#/components/schemas/LocationType'
         locationStatus:
-          type: integer
-          nullable: true
-          description: The location status will be among Active = 0, Inactive = 1,
-            Archived = 2
-          format: int32
-          example: 0
+          $ref: '#/components/schemas/LocationStatus'
         parentIds:
           type: array
           description: The array of location parent identifiers
@@ -2430,6 +2501,17 @@ components:
           description: The hierarchy identifier
           format: int32
           example: 10
+    LocationType:
+      type: string
+      enum:
+        - Group
+        - Location
+    LocationStatus:
+      type: string
+      enum:
+        - Active
+        - Inactive
+        - Archived
 # Lists
     ListItem:
       type: object
@@ -2511,14 +2593,14 @@ components:
     LocationListAvailability:
         type: object
         properties:
-            LocationIds:
+            Location:
                 description: The array of location identifiers
                 type: array
                 example: [ 1, 12]
                 items:
                     type: integer
                     format: int32
-            LocationGroupIds:
+            LocationGroup:
                 description: The array of location group identifiers
                 type: array
                 example: [ 1, 12]
@@ -2528,16 +2610,18 @@ components:
     LocationListAvailabilityDetails:
         type: object
         properties:
-            LocationStatuses:
+            Location:
                 description: The array statuses for locations
                 type: object
                 additionalProperties:
                   type: boolean
-            LocationGroupStatuses:
+                example: {"11": true, "12": false}
+            LocationGroup:
                 description: The array statuses for location groups
                 type: object
                 additionalProperties:
                   type: boolean
+                example: {"1": true, "2": false}
 # Persons
     Person:
       type: object
