fix issue with Authorize attribute

--- a/Schema/WebApi.yaml
+++ b/Schema/WebApi.yaml
@@ -72,6 +72,9 @@ paths:
                 $ref: '#/components/schemas/User'
         '204':
           description: The current user could not be found.
+      security : [ {
+        simple : []
+      } ]
 # Lists
   /lists:
     get:
